overlays/prod/gateway/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rrq-gateway
  namespace: rrq
  labels:
    app.kubernetes.io/part-of: rrq
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: api-https
      protocol: HTTPS
      port: 443
      hostname: "api.rrq.yotstack.tech"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: api-tls

    - name: cluster-https
      protocol: HTTPS
      port: 443
      hostname: "cluster.rrq.yotstack.tech"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: cluster-tls
    - name: logs-https
      protocol: HTTPS
      port: 443
      hostname: "logs.rrq.yotstack.tech"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: logs-tls
    - name: traces-https
      protocol: HTTPS
      port: 443
      hostname: "traces.rrq.yotstack.tech"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: traces-tls
    - name: metrics-https
      protocol: HTTPS
      port: 443
      hostname: "metrics.rrq.yotstack.tech"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: metrics-tls
